@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.3 2004/01/20 21:11:33 snj Exp $
+# $NetBSD: Makefile.common,v 1.4 2004/08/07 08:18:38 jdolecek Exp $
 #
 # NOTE: This file is included by:
 #
@@ -7,7 +7,7 @@
 #	security/winbind/Makefile
 
 DISTNAME=		samba-${SAMBA_DIST_VERS}
-SAMBA_DIST_VERS=	2.2.8a
+SAMBA_DIST_VERS=	2.2.10
 WRKSRC?=		${WRKDIR}/${DISTNAME}/source
 CATEGORIES?=		net
 MASTER_SITES=		ftp://ftp.samba.org/pub/samba/old-versions/ \
@@ -16,7 +16,7 @@ COUNTRY_MIRRORS=	fi ru se us1 us2
 .for COUNTRY in ${COUNTRY_MIRRORS}
 MASTER_SITES+=		ftp://${COUNTRY}.samba.org/pub/samba/old-versions/
 .endfor
-EXTRACT_SUFX=		.tar.bz2
+EXTRACT_SUFX=		.tar.gz
 
 DISTINFO_FILE?=		${.CURDIR}/../../net/samba2/distinfo
 PATCHDIR?=		${.CURDIR}/../../net/samba2/patches
